# ray_tracing

./: .gitignore  Cargo.toml
benches/: bench.rs  configs.rs  perf.rs
src/: camera.rs  config.rs  dielectric.rs  hittable.rs  hittable_list.rs  lambertian.rs  lib.rs  macros.rs  main.rs  material.rs  metal.rs  ray.rs  sphere.rs  vec3.rs
src/hittables/: aabb.rs  bvh.rs  hit_record.rs  hittable_list.rs  mod.rs  sphere.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
