[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Andres de Lago <delagoandres@gmail.com>"]
edition = "2018"

[dependencies]
png = "0.16"
rand = "0.8"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "configs"
harness = false

[[bench]]
name = "perf"
harness = false

[lib]
bench = false

[[bin]]
name = "ray_tracing"
bench = false
